# gdrive-aggregator-be/docs/swagger.json
@@ -363,6 +363,65 @@
                 }
             }
         },
+        "/api/v1/files/batch-delete": {
+            "post": {
+                "description": "Menghapus kumpulan file terpilih dari Google Drive dan database lokal",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Files"
+                ],
+                "summary": "Hapus Beberapa File Sekaligus",
+                "parameters": [
+                    {
+                        "description": "Daftar ID file yang ingin dihapus",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.BatchDeleteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "additionalProperties": true
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/files/download/{id}": {
             "get": {
                 "description": "Mengunduh file langsung dari Google Drive akun bersangkutan via streaming",
@@ -603,6 +662,20 @@
         }
     },
     "definitions": {
+        "handler.BatchDeleteRequest": {
+            "type": "object",
+            "required": [
+                "ids"
+            ],
+            "properties": {
+                "ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "model.Account": {
             "type": "object",
             "properties": {
@@ -764,6 +837,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "is_folder": {
+                    "type": "boolean"
+                },
                 "md5_checksum": {
                     "type": "string"
                 },
@@ -771,6 +847,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "parent_id": {
                     "type": "string"
                 },
                 "size": {
